<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>net.es.nsi</groupId>
    <artifactId>nsi-dds</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    <scm>
      <developerConnection>scm:git:https://github.com/BandwidthOnDemand/nsi-dds.git</developerConnection>
      <tag>HEAD</tag>
    </scm>

    <properties>
        <project.scm.id>github</project.scm.id>
        <maven.javadoc.skip>true</maven.javadoc.skip>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <jersey.version>2.31</jersey.version>
        <spring.version>4.3.28.RELEASE</spring.version>
        <slf4j.version>1.7.30</slf4j.version>
        <log4j.version>2.13.3</log4j.version>
        <jung.version>2.0.1</jung.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.sun.xml.bind</groupId>
            <artifactId>jaxb-xjc</artifactId>
            <version>2.2.11</version>
        </dependency>

        <!-- Jersey for JAX-RS and HTTP container runtime. -->
        <dependency>
            <groupId>org.glassfish.jersey.containers</groupId>
            <artifactId>jersey-container-grizzly2-servlet</artifactId>
            <version>${jersey.version}</version>
        </dependency>

        <dependency>
            <groupId>org.glassfish.jersey.media</groupId>
            <artifactId>jersey-media-moxy</artifactId>
            <version>${jersey.version}</version>
        </dependency>

        <dependency>
            <groupId>org.glassfish.jersey.core</groupId>
            <artifactId>jersey-common</artifactId>
            <version>${jersey.version}</version>
        </dependency>

        <dependency>
            <groupId>org.glassfish.jersey.test-framework.providers</groupId>
            <artifactId>jersey-test-framework-provider-bundle</artifactId>
            <version>${jersey.version}</version>
            <type>pom</type>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.glassfish.jersey.inject</groupId>
            <artifactId>jersey-hk2</artifactId>
            <version>${jersey.version}</version>
        </dependency>

        <dependency>
            <groupId>org.glassfish.jersey.ext</groupId>
            <artifactId>jersey-proxy-client</artifactId>
            <version>${jersey.version}</version>
        </dependency>

        <dependency>
            <groupId>org.glassfish.jersey.connectors</groupId>
            <artifactId>jersey-apache-connector</artifactId>
            <version>${jersey.version}</version>
        </dependency>

        <dependency>
            <groupId>javax.mail</groupId>
            <artifactId>javax.mail-api</artifactId>
            <version>1.5.4</version>
        </dependency>

        <dependency>
            <groupId>com.sun.mail</groupId>
            <artifactId>javax.mail</artifactId>
            <version>1.5.4</version>
        </dependency>

        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>4.5.12</version>
        </dependency>

        <!-- Needed for certificate DN manipulation. -->
        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcprov-jdk15on</artifactId>
            <version>1.52</version>
        </dependency>

        <!-- SLF and Log4j for logging infrestructure. -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>${slf4j.version}</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>jul-to-slf4j</artifactId>
            <version>${slf4j.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j.version}</version>
        </dependency>

        <!-- Google JSON parsers for reading configuration data from files. -->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.2.3</version>
        </dependency>

        <!-- For FileUtils -->
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>1.3.2</version>
        </dependency>

        <!-- For spring beans to drive configuration loading. -->
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-beans</artifactId>
            <version>${spring.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
            <version>${spring.version}</version>
        </dependency>

        <!-- For scheduling capabilites. -->
        <dependency>
            <groupId>org.quartz-scheduler</groupId>
            <artifactId>quartz</artifactId>
            <version>2.3.2</version>
        </dependency>

        <dependency>
            <groupId>org.quartz-scheduler</groupId>
            <artifactId>quartz-jobs</artifactId>
            <version>2.2.1</version>
        </dependency>

        <!-- Quartz is dependent on this. -->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-collections4</artifactId>
            <version>4.4</version>
        </dependency>

        <dependency>
            <groupId>commons-cli</groupId>
            <artifactId>commons-cli</artifactId>
            <version>1.4</version>
        </dependency>

        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>[24.1.1,)</version>
        </dependency>

        <dependency>
            <groupId>com.typesafe.akka</groupId>
            <artifactId>akka-actor_2.10</artifactId>
            <version>2.3.16</version>
        </dependency>

        <dependency>
          <groupId>org.projectlombok</groupId>
          <artifactId>lombok</artifactId>
          <version>1.18.12</version>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>1.9.5</version>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.hamcrest</groupId>
                    <artifactId>hamcrest-core</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-library</artifactId>
            <version>1.3</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.1</version>
            <scope>test</scope>
        </dependency>
     </dependencies>

    <build>
        <resources>
          <resource>
            <directory>src/main/resources</directory>
            <filtering>true</filtering>
            <includes>
              <include>**/version.properties</include>
            </includes>
          </resource>
          <resource>
            <directory>src/main/resources</directory>
            <filtering>false</filtering>
            <excludes>
              <exclude>**/version.properties</exclude>
            </excludes>
          </resource>
        </resources>
        <plugins>

            <plugin>
                <groupId>pl.project13.maven</groupId>
                <artifactId>git-commit-id-plugin</artifactId>
                <version>2.2.6</version>
                <executions>
                    <execution>
                        <id>get-the-git-infos</id>
                        <goals>
                            <goal>revision</goal>
                        </goals>
                        <phase>initialize</phase>
                    </execution>
                </executions>
                <configuration>
                    <generateGitPropertiesFile>true</generateGitPropertiesFile>
                    <generateGitPropertiesFilename>src/main/resources/git.properties</generateGitPropertiesFilename>
<!--
                    <includeOnlyProperties>
                        <includeOnlyProperty>^git.build.(time|version)$</includeOnlyProperty>
                        <includeOnlyProperty>^git.commit.id.(abbrev|full)$</includeOnlyProperty>
                    </includeOnlyProperties>
-->
                    <commitIdGenerationMode>flat</commitIdGenerationMode>
                    <gitDescribe>
                      <tags>true</tags>
                    </gitDescribe>
                </configuration>
            </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.1</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
          <compilerArgument>-Xlint:deprecation</compilerArgument>
        </configuration>
      </plugin>

      <plugin>
        <!-- We use this plugin to ensure that our usage of the
        maven-jaxb2-plugin is JDK 8 compatible in absence of a fix
        for https://java.net/jira/browse/MAVEN_JAXB2_PLUGIN-80. -->
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>properties-maven-plugin</artifactId>
        <version>1.0-alpha-2</version>
        <executions>
          <execution>
            <id>set-additional-system-properties</id>
            <goals>
              <goal>set-system-properties</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <properties>
            <property>
              <name>javax.xml.accessExternalSchema</name>
              <value>file,http,all</value>
            </property>
          </properties>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>jaxb2-maven-plugin</artifactId>
        <version>1.6</version>
        <executions>
          <execution>
            <id>configuration</id>
            <goals>
              <goal>xjc</goal>
            </goals>
            <configuration>
              <bindingDirectory>${basedir}/src/main/xsd</bindingDirectory>
              <bindingFiles>configuration.xjb</bindingFiles>
              <schemaDirectory>${basedir}/src/main/xsd</schemaDirectory>
              <schemaFiles>dds-configuration.xsd</schemaFiles>
              <packageName>net.es.nsi.dds.jaxb.configuration</packageName>
            </configuration>
          </execution>
          <execution>
            <id>management</id>
            <goals>
              <goal>xjc</goal>
            </goals>
            <configuration>
              <bindingDirectory>${basedir}/src/main/xsd</bindingDirectory>
              <bindingFiles>management.xjb</bindingFiles>
              <schemaDirectory>${basedir}/src/main/xsd</schemaDirectory>
              <schemaFiles>dds-management.xsd</schemaFiles>
              <packageName>net.es.nsi.dds.jaxb.management</packageName>
              <clearOutputDir>false</clearOutputDir>
            </configuration>
          </execution>
          <execution>
            <id>dds</id>
            <goals>
              <goal>xjc</goal>
            </goals>
            <configuration>
              <bindingDirectory>${basedir}/src/main/xsd</bindingDirectory>
              <bindingFiles>dds.xjb</bindingFiles>
              <schemaDirectory>${basedir}/src/main/xsd</schemaDirectory>
              <schemaFiles>ogf_nsi_discovery_protocol_v1_0.xsd</schemaFiles>
              <packageName>net.es.nsi.dds.jaxb.dds</packageName>
              <clearOutputDir>false</clearOutputDir>
            </configuration>
          </execution>
          <execution>
            <id>nml</id>
            <goals>
              <goal>xjc</goal>
            </goals>
            <configuration>
              <bindingDirectory>${basedir}/src/main/xsd</bindingDirectory>
              <bindingFiles>nml.xjb</bindingFiles>
              <schemaDirectory>${basedir}/src/main/xsd</schemaDirectory>
              <schemaFiles>nmlbase.xsd, nml-ethernet.xsd, ogf_nsi_services_definition_v2_0.xsd, nsi-ext.xsd</schemaFiles>
              <packageName>net.es.nsi.dds.jaxb.nml</packageName>
              <clearOutputDir>false</clearOutputDir>
            </configuration>
          </execution>
          <execution>
            <id>nsa</id>
            <goals>
              <goal>xjc</goal>
            </goals>
            <configuration>
              <bindingDirectory>${basedir}/src/main/xsd</bindingDirectory>
              <bindingFiles>nsa.xjb</bindingFiles>
              <schemaDirectory>${basedir}/src/main/xsd</schemaDirectory>
              <schemaFiles>ogf_nsi_discovery_nsa_v1_0.xsd, xCard.xsd, gnsbod.xsd</schemaFiles>
              <packageName>net.es.nsi.dds.jaxb.nsa</packageName>
              <clearOutputDir>false</clearOutputDir>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <!-- Set up DDS document files for unit tests. -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-antrun-plugin</artifactId>
        <version>1.8</version>
        <executions>
          <execution>
            <phase>compile</phase>
            <goals>
              <goal>run</goal>
            </goals>
            <configuration>
              <tasks>
                <echo>Copying test files to unit test locations.</echo>
                <copy todir="${project.basedir}/src/test/resources/config/cache">
                  <fileset dir="${project.basedir}/src/test/resources/test-cache" />
                </copy>
              </tasks>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <!-- puts all code & libraries in one jar -->
      <plugin>
        <groupId>com.jolira</groupId>
        <artifactId>onejar-maven-plugin</artifactId>
        <version>1.4.4</version>
        <executions>
          <execution>
            <id>DDS</id>
            <configuration>
              <mainClass>net.es.nsi.dds.server.Main</mainClass>
              <classifier>onejar</classifier>
              <filename>dds.jar</filename>
            </configuration>
            <goals>
              <goal>one-jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.16</version>
        <configuration>
          <argLine>-Xmx1024m -XX:MaxPermSize=256m -Djava.net.preferIPv4Stack=true</argLine>
          <argLine>-Djersey.config.test.container.port=8401</argLine>
          <argLine>-Dcom.sun.xml.bind.v2.runtime.JAXBContextImpl.fastBoot=true</argLine>
        </configuration>
      </plugin>

      <plugin>
        <artifactId>maven-clean-plugin</artifactId>
        <version>2.5</version>
        <configuration>
          <filesets>
            <fileset>
              <directory>${basedir}/var</directory>
            </fileset>
          </filesets>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <distributionManagement>
    <repository>
      <id>github</id>
      <name>GitHub BanwidthOnDemand nsi-dds Apache Maven Packages</name>
      <url>https://maven.pkg.github.com/BandwidthOnDemand/nsi-dds</url>
    </repository>
  </distributionManagement>

  <profiles>
    <profile>
      <id>examples-source-zip</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-assembly-plugin</artifactId>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>

</project>
